# mirror-example

./: LICENSE  Readme.md  meson.build  srcAssembler.sh
Assets/: Cube.glb  Mirror.glb  mainShader.frag  mainShader.vert  mirrorShader.frag  mirrorShader.vert
include/: Mesh.h  Renderer.h  Shader.h  helpers.h
src/: Mesh.cpp  Renderer.cpp  Shader.cpp  helpers.cpp  main.cpp
